fix: small screen modal right to left animation layout break

--- a/src/components/TopNavBar/NavModal.module.scss
+++ b/src/components/TopNavBar/NavModal.module.scss
@@ -24,10 +24,10 @@ $icon-size: 2rem;
 
 @keyframes navmodal-animation {
   0% {
-    transform: translateX(23rem);
+    filter: blur(5px) opacity(0);
   }
   100% {
-    transform: translateX(0);
+    opacity: 1;
   }
 }
 
